--- a/Source/Vima.LoggingAbstractor.Core/Vima.LoggingAbstractor.Core.csproj
+++ b/Source/Vima.LoggingAbstractor.Core/Vima.LoggingAbstractor.Core.csproj
@@ -20,7 +20,7 @@
   </PropertyGroup>
   
   <PropertyGroup>
-    <TargetFrameworks>net46;net45;net40;net35;net20;netstandard1.0;netstandard2.0;portable-net40+sl5+win8+wpa81+wp8;portable-net45+win8+wpa81+wp8</TargetFrameworks>
+    <TargetFrameworks>net47;net46;net45;net40;net35;net20;netstandard1.0;netstandard2.0;portable-net40+sl5+win8+wpa81+wp8;portable-net45+win8+wpa81+wp8</TargetFrameworks>
     <AssemblyName>Vima.LoggingAbstractor.Core</AssemblyName>
     <RootNamespace>Vima.LoggingAbstractor.Core</RootNamespace>
   </PropertyGroup>
