--- a/Source/Vima.LoggingAbstractor.AppInsights/Vima.LoggingAbstractor.AppInsights.csproj
+++ b/Source/Vima.LoggingAbstractor.AppInsights/Vima.LoggingAbstractor.AppInsights.csproj
@@ -1,7 +1,28 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Version>1.0.0</Version>
+    <FileVersion>1.0.0</FileVersion>
+    <Authors>Victor Usoltsev</Authors>
+    <Description>Logging Abstractor is a library for .NET that allows you to swap out logging providers with ease.</Description>
+    <Copyright>Copyright © Victor Usoltsev 2018</Copyright>
+    <PackageLicenseUrl>https://github.com/bernarden/LoggingAbstractor/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/bernarden/LoggingAbstractor/master/Resources/NugetIcon.png</PackageIconUrl>
+    <RepositoryUrl>https://github.com/bernarden/LoggingAbstractor</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>logging abstractor abstraction logger</PackageTags>
+    <PackageProjectUrl>https://github.com/bernarden/LoggingAbstractor</PackageProjectUrl>
+    <Company>Vima</Company>
+    <NeutralLanguage>en-US</NeutralLanguage>
+    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+    <Product>LoggingAbstractor.AppInsights</Product>
+    <PackageId>LoggingAbstractor.AppInsights</PackageId>
+  </PropertyGroup>
+
+  <PropertyGroup>
     <TargetFrameworks>net47;net46;net45;net40;netstandard1.3;netstandard2.0</TargetFrameworks>
+    <AssemblyName>Vima.LoggingAbstractor.AppInsights</AssemblyName>
+    <RootNamespace>Vima.LoggingAbstractor.AppInsights</RootNamespace>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\Vima.LoggingAbstractor.AppInsights.xml</DocumentationFile>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
