--- a/Source/Vima.LoggingAbstractor.Core/Vima.LoggingAbstractor.Core.csproj
+++ b/Source/Vima.LoggingAbstractor.Core/Vima.LoggingAbstractor.Core.csproj
@@ -78,6 +78,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" PrivateAssets="All" />
   </ItemGroup>
 </Project>
