--- a/Source/Vima.LoggingAbstractor.Raygun/Vima.LoggingAbstractor.Raygun.csproj
+++ b/Source/Vima.LoggingAbstractor.Raygun/Vima.LoggingAbstractor.Raygun.csproj
@@ -39,8 +39,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.0" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" PrivateAssets="All" />
   </ItemGroup>
   
   <ItemGroup>
