--- a/Source/Vima.LoggingAbstractor.Core/Vima.LoggingAbstractor.Core.csproj
+++ b/Source/Vima.LoggingAbstractor.Core/Vima.LoggingAbstractor.Core.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-<PropertyGroup>
+  <PropertyGroup>
     <Version>1.0.0</Version>
     <FileVersion>1.0.0</FileVersion>
     <Authors>Victor Usoltsev</Authors>
@@ -18,9 +18,9 @@
     <Product>LoggingAbstractor.Core</Product>
     <PackageId>LoggingAbstractor.Core</PackageId>
   </PropertyGroup>
-  
+
   <PropertyGroup>
-    <TargetFrameworks>net47;net46;net45;net40;net35;net20;netstandard1.0;netstandard2.0;portable-net40+sl5+win8+wpa81+wp8;portable-net45+win8+wpa81+wp8</TargetFrameworks>
+    <TargetFrameworks>net47;net46;net45;net40;net35;net20;netstandard1.0;netstandard2.0</TargetFrameworks>
     <AssemblyName>Vima.LoggingAbstractor.Core</AssemblyName>
     <RootNamespace>Vima.LoggingAbstractor.Core</RootNamespace>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\Vima.LoggingAbstractor.Core.xml</DocumentationFile>
@@ -28,7 +28,11 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
   </PropertyGroup>
-  
+
+  <ItemGroup>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" PrivateAssets="All" />
+  </ItemGroup>
+
   <PropertyGroup Condition="'$(TargetFramework)'=='net46'">
     <DefineConstants>NET46</DefineConstants>
   </PropertyGroup>
@@ -37,30 +41,6 @@
     <DefineConstants>NET45</DefineConstants>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(TargetFramework)'=='portable-net45+win8+wpa81+wp8' AND '$(MSBuildRuntimeType)' == 'Full'">
-    <DefineConstants>PORTABLE45</DefineConstants>
-    <TargetFrameworkIdentifier>.NETPortable</TargetFrameworkIdentifier>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Profile259</TargetFrameworkProfile>
-    <NugetTargetMoniker>.NETPortable,Version=v0.0,Profile=Profile259</NugetTargetMoniker>
-    <LanguageTargets>$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets</LanguageTargets>
-    <IncludeProjectPriFile>false</IncludeProjectPriFile>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(TargetFramework)'=='net40'">
-    <DefineConstants>NET40</DefineConstants>
-  </PropertyGroup>
-  
-  <PropertyGroup Condition="'$(TargetFramework)'=='portable-net40+sl5+win8+wpa81+wp8' AND '$(MSBuildRuntimeType)' == 'Full'">
-    <DefineConstants>PORTABLE40</DefineConstants>
-    <TargetFrameworkIdentifier>.NETPortable</TargetFrameworkIdentifier>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Profile328</TargetFrameworkProfile>
-    <NugetTargetMoniker>.NETPortable,Version=v0.0,Profile=Profile328</NugetTargetMoniker>
-    <LanguageTargets>$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets</LanguageTargets>
-    <IncludeProjectPriFile>false</IncludeProjectPriFile>
-  </PropertyGroup>
-  
   <PropertyGroup Condition="'$(TargetFramework)'=='net35'">
     <DefineConstants>NET35</DefineConstants>
   </PropertyGroup>
@@ -76,8 +56,4 @@
   <PropertyGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
     <DefineConstants>NETSTANDARD2_0</DefineConstants>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" PrivateAssets="All" />
-  </ItemGroup>
 </Project>
