--- a/Source/Vima.LoggingAbstractor.Raygun.Tests/Vima.LoggingAbstractor.Raygun.Tests.csproj
+++ b/Source/Vima.LoggingAbstractor.Raygun.Tests/Vima.LoggingAbstractor.Raygun.Tests.csproj
@@ -12,6 +12,8 @@
   </PropertyGroup>
  
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.1.2" />
+    <PackageReference Include="Moq" Version="4.8.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
