--- a/Source/Vima.LoggingAbstractor.Raygun.Tests/Vima.LoggingAbstractor.Raygun.Tests.csproj
+++ b/Source/Vima.LoggingAbstractor.Raygun.Tests/Vima.LoggingAbstractor.Raygun.Tests.csproj
@@ -12,8 +12,8 @@
   </PropertyGroup>
  
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="5.4.2" />
-    <PackageReference Include="Moq" Version="4.10.0" />
+    <PackageReference Include="FluentAssertions" Version="5.5.3" />
+    <PackageReference Include="Moq" Version="4.10.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
@@ -22,6 +22,10 @@
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
+  </ItemGroup>
+ 
+  <ItemGroup>
+    <ProjectReference Include="..\Vima.LoggingAbstractor.Raygun\Vima.LoggingAbstractor.Raygun.csproj" />
   </ItemGroup>
  
   <ItemGroup>
