--- a/Source/Vima.LoggingAbstractor.Console/Vima.LoggingAbstractor.Console.csproj
+++ b/Source/Vima.LoggingAbstractor.Console/Vima.LoggingAbstractor.Console.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <Version>0.2.2</Version>
@@ -6,7 +6,7 @@
     <Authors>Victor Usoltsev</Authors>
     <Description>Logging Abstractor is a library for .NET that allows you to swap out logging providers with ease.</Description>
     <Copyright>Copyright © Victor Usoltsev 2018</Copyright>
-    <PackageLicenseUrl>https://github.com/bernarden/LoggingAbstractor/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIconUrl>https://raw.githubusercontent.com/bernarden/LoggingAbstractor/master/Resources/NugetIcon.png</PackageIconUrl>
     <RepositoryUrl>https://github.com/bernarden/LoggingAbstractor</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
@@ -31,6 +31,10 @@
 
   <ItemGroup>
     <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" PrivateAssets="All" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\LICENSE.md" Pack="true" PackagePath="LICENSE.md" />
   </ItemGroup>
 
   <ItemGroup>
