--- a/Source/Vima.LoggingAbstractor.Sentry/Vima.LoggingAbstractor.Sentry.csproj
+++ b/Source/Vima.LoggingAbstractor.Sentry/Vima.LoggingAbstractor.Sentry.csproj
@@ -20,7 +20,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFrameworks>net471;net45;net40;net35;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net35;net40;net45;net461;netstandard2.0</TargetFrameworks>
     <AssemblyName>Vima.LoggingAbstractor.Sentry</AssemblyName>
     <RootNamespace>Vima.LoggingAbstractor.Sentry</RootNamespace>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\Vima.LoggingAbstractor.Sentry.xml</DocumentationFile>
@@ -28,6 +28,14 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(TargetFramework)'=='net461' OR '$(TargetFramework)'=='netstandard2.0'">
+    <DefineConstants>SentrySDK</DefineConstants>
+  </PropertyGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)'=='net461' OR '$(TargetFramework)'=='netstandard2.0'">
+    <PackageReference Include="Sentry " Version="1.1.1" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="SharpRaven" Version="2.4.0" />
