--- a/Source/Vima.LoggingAbstractor.Sentry.Tests/Vima.LoggingAbstractor.Sentry.Tests.csproj
+++ b/Source/Vima.LoggingAbstractor.Sentry.Tests/Vima.LoggingAbstractor.Sentry.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net47</TargetFramework>
@@ -14,6 +14,8 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.5.3" />
     <PackageReference Include="Moq" Version="4.10.1" />
+    <PackageReference Include="Sentry " Version="1.1.1" />
+    <PackageReference Include="SharpRaven" Version="2.4.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
@@ -22,5 +24,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Vima.LoggingAbstractor.Sentry\Vima.LoggingAbstractor.Sentry.csproj" />
   </ItemGroup>
 </Project>
