--- a/Source/Vima.LoggingAbstractor.Console/Vima.LoggingAbstractor.Console.csproj
+++ b/Source/Vima.LoggingAbstractor.Console/Vima.LoggingAbstractor.Console.csproj
@@ -20,7 +20,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFrameworks>net47;net46;net45;netstandard1.3;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net46;net45;netstandard1.3;netstandard2.0</TargetFrameworks>
     <AssemblyName>Vima.LoggingAbstractor.Console</AssemblyName>
     <RootNamespace>Vima.LoggingAbstractor.Console</RootNamespace>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\Vima.LoggingAbstractor.Console.xml</DocumentationFile>
