--- a/Source/Vima.LoggingAbstractor.Core/Vima.LoggingAbstractor.Core.csproj
+++ b/Source/Vima.LoggingAbstractor.Core/Vima.LoggingAbstractor.Core.csproj
@@ -20,7 +20,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFrameworks>net47;net46;net45;net40;net35;netstandard1.0;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net46;net45;net40;net35;netstandard1.0;netstandard2.0</TargetFrameworks>
     <AssemblyName>Vima.LoggingAbstractor.Core</AssemblyName>
     <RootNamespace>Vima.LoggingAbstractor.Core</RootNamespace>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\Vima.LoggingAbstractor.Core.xml</DocumentationFile>
@@ -30,7 +30,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="All" />
   </ItemGroup>
 
