--- a/Source/Vima.LoggingAbstractor.Sentry.Tests/Vima.LoggingAbstractor.Sentry.Tests.csproj
+++ b/Source/Vima.LoggingAbstractor.Sentry.Tests/Vima.LoggingAbstractor.Sentry.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net47</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <AssemblyName>Vima.LoggingAbstractor.Sentry.Tests</AssemblyName>
     <RootNamespace>Vima.LoggingAbstractor.Sentry.Tests</RootNamespace>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\Vima.LoggingAbstractor.Sentry.Tests.xml</DocumentationFile>
@@ -12,8 +12,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="5.9.0" />
-    <PackageReference Include="Moq" Version="4.12.0" />
+    <PackageReference Include="FluentAssertions" Version="5.10.0" />
+    <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="Sentry " Version="1.2.0" />
     <PackageReference Include="SharpRaven" Version="2.4.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
@@ -25,7 +25,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
 
