--- a/Source/Vima.LoggingAbstractor.AppInsights/Vima.LoggingAbstractor.AppInsights.csproj
+++ b/Source/Vima.LoggingAbstractor.AppInsights/Vima.LoggingAbstractor.AppInsights.csproj
@@ -8,6 +8,7 @@
     <Copyright>Copyright © Victor Usoltsev 2018</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIconUrl>https://raw.githubusercontent.com/bernarden/LoggingAbstractor/master/Resources/NugetIcon.png</PackageIconUrl>
+    <PackageIcon>icon.png</PackageIcon>
     <RepositoryUrl>https://github.com/bernarden/LoggingAbstractor</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>logging abstractor abstraction logger</PackageTags>
@@ -36,6 +37,7 @@
 
   <ItemGroup>
     <None Include="..\..\LICENSE.md" Pack="true" PackagePath="LICENSE.md" />
+    <None Include="..\..\Resources\NugetIcon.png" Pack="true" PackagePath="\icon.png"/>
   </ItemGroup>
 
   <ItemGroup>
